--- a/pages/record/appointment-record-detail/appointment-record-detail.json
+++ b/pages/record/appointment-record-detail/appointment-record-detail.json
@@ -1,3 +1,6 @@
 {
-  "navigationBarTitleText": "预约记录"
+  "navigationBarTitleText": "预约记录",
+  "usingComponents": {
+    "get-vertify": "/components/get-vertify/get-vertify"
+  }
 }
