修改小程序账户

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.2",
-	"appid": "wxe79ea86026141aef",
+	"appid": "wx598296333b152b00",
 	"projectname": "guanganmen",
 	"condition": {
 		"search": {
