修改医院名字

--- a/app.json
+++ b/app.json
@@ -109,7 +109,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "广安门医院",
+    "navigationBarTitleText": "中国中医科学院广安门医院",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
